--- a/Wechat_ArkTs/entry/src/main/module.json5
+++ b/Wechat_ArkTs/entry/src/main/module.json5
@@ -1,5 +1,4 @@
 {
-
   "module": {
     "name": "entry",
     "type": "entry",
@@ -9,10 +8,13 @@
       "phone",
       "tablet"
     ],
+    "deliveryWithInstall": true,
+    "installationFree": false,
+    "pages": "$profile:main_pages",
     "requestPermissions": [
       {
-        "name" : "ohos.permission.MICROPHONE",
-        "reason": "$string:net_permission_reason",
+        "name": "ohos.permission.INTERNET",
+        "reason": "$string:internet_permission_reason",
         "usedScene": {
           "abilities": [
             "EntryAbility"
@@ -20,10 +22,29 @@
           "when": "inuse"
         }
       },
-
       {
-        "name": "ohos.permission.INTERNET",
-        "reason": "$string:net_permission_reason",
+        "name": "ohos.permission.GET_NETWORK_INFO",
+        "reason": "$string:network_permission_reason",
+        "usedScene": {
+          "abilities": [
+            "EntryAbility"
+          ],
+          "when": "inuse"
+        }
+      },
+      {
+        "name": "ohos.permission.LOCATION",
+        "reason": "$string:location_permission_reason",
+        "usedScene": {
+          "abilities": [
+            "EntryAbility"
+          ],
+          "when": "inuse"
+        }
+      },
+      {
+        "name": "ohos.permission.APPROXIMATELY_LOCATION",
+        "reason": "$string:location_permission_reason",
         "usedScene": {
           "abilities": [
             "EntryAbility"
@@ -39,6 +60,32 @@
             "EntryAbility"
           ],
           "when": "inuse"
+        }
+      },
+      {
+        "name": "ohos.permission.MICROPHONE",
+        "reason": "$string:microphone_permission_reason",
+        "usedScene": {
+          "abilities": [
+            "EntryAbility"
+          ],
+          "when": "inuse"
+        }
+      },
+      {
+        "name": "ohos.permission.WRITE_AUDIO",
+        "reason":"$string:music_Bofang_reason",
+        "usedScene": {
+          "abilities": ["FormAbility"],
+          "when": "always"
+        }
+      },
+      {
+        "name": "ohos.permission.READ_AUDIO",
+        "reason": "$string:Music_Read_reason",
+        "usedScene": {
+          "abilities": ["FormAbility"],
+          "when": "always"
         }
       },
       {
@@ -62,28 +109,38 @@
         }
       },
       {
-        "name": "ohos.permission.GET_NETWORK_INFO",
-        "reason": "$string:net_info_permission_reason",
+        "name": "ohos.permission.MEDIA_LOCATION",
+        "reason": "$string:media_location_permission_reason",
         "usedScene": {
           "abilities": [
             "EntryAbility"
           ],
           "when": "inuse"
         }
-      }
+      },
+//      {
+//        "name": "ohos.permission.KEEP_BACKGROUND_RUNNING",
+//        "reason": "需要在后台继续播放音乐",
+//        "usedScene": {
+//          "abilities": [
+//            "EntryAbility"
+//          ],
+//          "when": "inuse"
+//        }
+//      }
     ],
-    "deliveryWithInstall": true,
-    "installationFree": false,
-    "pages": "$profile:main_pages",
     "abilities": [
       {
         "name": "EntryAbility",
         "srcEntry": "./ets/entryability/EntryAbility.ets",
         "description": "$string:EntryAbility_desc",
-        "icon": "$media:wechat_logo",
+        "icon": "$media:app_icon",
         "label": "$string:EntryAbility_label",
-        "startWindowIcon": "$media:icon",
+        "startWindowIcon": "$media:app_icon",
         "startWindowBackground": "$color:start_window_background",
+        "backgroundModes": [
+          "audioPlayback"
+        ],
         "exported": true,
         "skills": [
           {
